multicontainer_vol.yml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginx
  name: nginx
spec:
  containers:
  - image: busybox
    name: init-container
    volumeMounts:
            - name: sample-vol
              mountPath: /work-dir
    command:
    - "wget -O /work-dir/index.html http://neverssl.com/online"
  - image: nginx
    name: nginx
    volumeMounts:
            - name: sample-vol
              mountPath: /usr/share/nginx/html
    ports:
    - containerPort: 80
  dnsPolicy: ClusterFirst
  restartPolicy: Always
  volumes:
          -  name: sample-vol
             emptyDir: {}
status: {}
