secret_pod.yml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginx
  name: nginx
spec:
  volumes:
   - name: foo
     secret:
       secretName: mysecret
  containers:
  - image: nginx
    name: nginx
    resources: {}
    volumeMounts:
            - name: foo
              mountPath: /etc/foo
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
